assets/css/style.css
* {
    padding: 0;
    margin: 0;
    /* border: 1px solid red; */
    box-sizing: border-box;
}

:root {
    --re-light: #fff;
    --re-dark: rgba(50, 50, 51, 1);
    --re-first: rgba(1, 132, 252, 1);
    --re-first-light: rgba(181, 220, 254, 1);
    --re-second: rgba(150, 146, 229, 1);
    --re-attention: rgba(253, 192, 94, 1);
}

* {
    font-family: 'PT Sans', sans-serif;
}

/* #region Common CSS */
p,
a {
    font-weight: 400;
    text-decoration: none;
}

p,
i {
    line-height: 1.5rem;
}

h4 {
    font-size: 1.4rem;
}

h3 {
    font-size: 2.2rem;
}

h2 {
    font-size: 3.5rem;
}


.col-l-4 {
    width: calc(100%/12 * 4 - 1rem);
}

.col-l-5 {
    width: calc(100%/12*5 - 1rem);
}

.col-l-8 {
    width: calc(100%/12 * 8 - 1rem);
}

.btn-blue {
    padding: 0.5rem 1rem;
    background-color: var(--re-first);
    border-radius: 25px;
    width: 75%;
}

.btn-blue a {
    display: flex;
}

.btn-blue i,
.btn-blue p {
    color: var(--re-light);
}

.btn-secondary {
    margin: 1rem 0;
    padding: 0.5rem 1rem;
    background-color: var(--re-second);
    border-radius: 25px;
    width: 55%;
    display: flex;
    justify-content: center;
}

.btn-secondary p,
.btn-secondary i {
    color: var(--re-light);
}

.btn-light {
    margin: 1rem auto;
    padding: 1rem;
    background-color: var(--re-light);
    border-radius: 25px;
    width: 30%;
    display: flex;
    justify-content: center;
}

.btn-light a,
.btn-light p {
    color: var(--re-second);
    font-weight: 700;
    letter-spacing: 2px;
}

/* #endregion Common CSS */

/* #region Utility CSS */

.d-flex {
    display: flex;
}

.d-flex-start {
    display: flex;
    align-items: start;
    flex-direction: column;
    justify-content: flex-end;

}

.d-flex-end {
    display: flex;
    flex-direction: column;
    align-items: end;
}

.w-50 {
    max-width: 1152px;
    width: 50%;
    margin: 0 auto;
}

.w-80 {
    max-width: 1152px;
    width: 80%;
    margin: 0 auto;
}

.p-1 {
    padding: 1rem;
}

.py-2 {
    padding: 2rem 0;
}


/* #endregion Utility CSS */

/* #region header */
.nav-mobile {
    display: none;
}

header {
    background-color: var(--re-first);
    padding: 0.5rem 0;
}

nav.d-flex {
    justify-content: space-between;
    align-items: center;
}

.nav-pc li {
    list-style-type: none;
    padding: 0.5rem 0.8rem;
}

.nav-pc li>a {
    color: var(--re-light);
    text-transform: capitalize;
    text-align: center;
}

.nav-pc li:last-child {
    background-color: var(--re-light);
    border-radius: 20px;
}

.nav-pc li:last-child a {
    color: var(--re-dark);
    text-align: center;

}

/* #endregion header */

/* #region main */
/* #region jumbo */

.jumbotron {
    max-width: 1152px;
    width: 80%;
    margin: 0 auto;
}

.jumbotron .row {
    flex-wrap: wrap;
    margin: 0 -1rem;
}

.jumbotron .card:first-child>.card-header {
    padding: 1rem;
}

.jumbotron .card-header>h3,
.jumbotron .card-header>p,
.jumbotron .card-header .btn-blue {
    margin: 2rem 0;
}

.jumbotron .card:first-child>.card-content {
    display: flex;
    justify-content: center;
    align-items: end;
    padding: 1rem 1rem 0;
}

.jumbotron .card:first-child>.card-content>img {
    width: 14rem;
}

.jumbotron .card {
    margin: 1rem 0.5rem;
    background-color: var(--re-first-light);
    border-radius: 30px;
    padding: 1rem;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.jumbotron .card i {
    color: var(--re-first);
    font-size: 4rem;
}

.jumbotron .card:first-child i {
    color: var(--re-light);
    font-size: 1rem;
}

.jumbotron .card h3 {
    color: var(--re-first);
}

.jumbotron .card:first-child {
    flex-direction: row;
    align-items: end;
    padding-bottom: 0;
}

/* #endregion jumbo */

/* #region what */
.what {
    background-color: var(--re-second);
}

.what .row {
    justify-content: space-evenly;
}

.what .card img {
    width: 50%;
}

.what img {
    max-width: 100%;
}

.what .col-l-4:first-child {
    color: var(--re-light);
}

.what .col-l-4:first-child h3 {
    margin-bottom: 3.5rem;
}

.what .col-l-4:first-child img {
    margin-bottom: 8rem;
}

.what .card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--re-light);
    border-radius: 30px;
    text-align: center;
    padding: 2rem;
}

.what .card img,
.what .card h3 {
    padding: 1rem 0;
}

.what .card p {
    margin-top: 1rem;
    font-style: italic;
}

.what .card>.icon {
    margin-top: 1rem;
    background-color: var(--re-second);
    width: 3rem;
    height: 3rem;
    border-radius: 50%;
}

.what .card>.icon>i {
    color: var(--re-light);
    line-height: 3rem;
    font-size: 1.5rem;
}

.what .card {
    margin-top: 5rem;
}

/* #endregion what */

/* #region testimonials */
.testimonials .title {
    text-align: center;
    padding: 2rem 0;
}

.testimonials .title h4 {
    text-transform: uppercase;
    font-weight: 400;
    padding: 1rem 0;
}

.testimonials .title h2 {
    color: var(--re-second);
    font-size: 2.5rem;
    padding: 1rem 0;
}

.testimonials .card {
    background-color: var(--re-second);
    justify-content: center;
    align-items: center;
    padding: 1rem 1rem 1rem 0.5rem;
    border-radius: 30px;
    margin: 2rem 0;
}

.testimonials .card-photo {
    width: 15%;
    aspect-ratio: 1;
}

.testimonials .card-photo>img {
    max-width: 100%;
    aspect-ratio: 1;
    object-fit: cover;
    border-radius: 50%;
}

.testimonials .card-content {
    color: var(--re-light);
    padding: 2rem;
}

.testimonials .card-content h4 {
    text-transform: uppercase;
    padding-top: 1rem;
    font-size: 1rem;
}


/* #endregion testimonials */

/* #region workwithus */

.work-with-us {
    background-color: var(--re-second);
}

.work-with-us .title {
    color: var(--re-light);
    padding: 2rem 0;
    text-align: center;
}


.work-with-us .content {
    flex-wrap: wrap;
}

.work-with-us .card {
    margin: 0.5rem;
    background-color: var(--re-light);
    padding: 1rem;
    border-radius: 30px;
}

.work-with-us .card h2,
.work-with-us .card h4 {
    color: var(--re-second);
    padding: 1rem 0;
}

/* #endregion workwithus */

/* #region about-us */
.about-us .content {
    justify-content: space-between;
}

.about-us .about h2 {
    color: var(--re-second);
    padding: 1rem 0;
}

.about-us .about p {
    line-height: 1.7rem;
    padding: 1rem 0;
}

.about-us .photo i {
    font-size: 4rem;
    color: var(--re-second);
    position: absolute;

    right: 1rem;
    top: 1rem;
}

.about-us .cit {
    padding-left: 2rem;
    position: relative;
}

.about-us .photo>img {
    padding: 0 1rem;
    max-width: 100%;
    border-radius: 50%;
}

.about-us .cit .btn-secondary {
    width: 80%;
    justify-content: center;
    align-items: center;
    font-size: 0.8rem;
}

.about-us .cit .btn-secondary i {
    padding-right: 0.5rem;
}

.about-us .cit h4 {
    padding: 1rem 0;
    color: var(--re-second);
}

/* #endregion about-us */



/* #endregion main */

/* #region footer */

.footer-top {
    background-color: var(--re-second);
    text-align: center;
}

.footer-top h4 {
    text-transform: uppercase;
    font-weight: 400;
    color: var(--re-light);
    padding: 0.5rem;
}

.footer-top h3 {
    text-transform: capitalize;
    color: var(--re-light);
    padding: 0.5rem;
}

.footer-top h2 {
    color: var(--re-attention);
    padding: 0.5rem;
}

.footer-top .copy {
    font-size: 0.8rem;
    color: var(--re-light);
}

.copy a {
    color: var(--re-light);
    text-transform: capitalize;
}

.footer-bottom {
    background-color: var(--re-dark);
    color: var(--re-light);
    text-align: center;
}

.footer-bottom a {
    color: var(--re-second);
}


/* #endregion footer */



/* #region TABLET */

@media screen and (max-width:768px) {

    /* #region Utility CSS */
    .col-m-12 {
        width: calc(100%/12 * 12);
        margin: 0 auto;
    }

    .col-m-6 {
        width: calc(100%/12*6 - 1rem);
    }

    .w-m-80 {
        width: 80%;
    }

    /* #endregion Utility CSS */

    .nav-pc {
        display: none;
    }

    .nav-mobile {
        display: block;
    }

    .nav-mobile>i {
        color: var(--re-light);
    }


    .jumbotron .row {
        flex-direction: column;
    }

    .jumbotron .card:first-child {
        flex-direction: column;
    }

    .what .row {
        flex-direction: column;
    }

    .what .card {
        margin-top: 1rem;
    }

    .testimonials .card-photo {
        width: 70%;
        aspect-ratio: 1;
    }

    .about-us .photo {
        padding-left: 1rem;
    }
}

/* #endregion TABLET */


/* #region MOBILE */

@media screen and (max-width:480px) {
    /* #region Utility CSS */

    .col-s-12 {
        width: calc(100%/12 * 12);
        margin: 0 auto;
    }

    /* #endregion Utility CSS */

    .nav-pc {
        display: none;
    }

    .nav-mobile {
        display: block;
    }

    .nav-mobile>i {
        color: var(--re-light);
    }

    .testimonials .card {
        flex-direction: column;
    }

    .testimonials .card-photo {
        width: 50%;
        aspect-ratio: 1;
    }

    .about-us .content {
        flex-direction: column;
    }

    .about-us .photo {
        padding: 0;
    }

}

/* #endregion MOBILE */

